k8s/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx-ingress
spec:
  type: LoadBalancer
  loadBalancerIP: 35.196.47.252
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: nginx
