k8s/nginx/ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prod-services-tls
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/affinity: "cookie"
    ingress.kubernetes.io/session-cookie-name: "route"
    ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  tls:
    - hosts:
      - ableto.nidhinpattaniyil.com
      secretName: prod-tls
  rules:
    - host: ableto.nidhinpattaniyil.com
      http:
        paths:
        - path: /
          backend:
            serviceName: citibike
            servicePort: 80
